modules/015-admission-policy-engine/charts/constraint-templates/tests/allow-host-network/constraint_pss_baseline.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: D8HostNetwork
metadata:
  name: test
spec:
  enforcementAction: "deny"
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaceSelector:
      matchExpressions:
        - key: security.deckhouse.io/pod-policy
          operator: In
          values:
          - baseline
          - restricted
  parameters:
    allowHostNetwork: false
    ranges:
    - min: 1000
      max: 10000
    - min: 20000
      max: 30000
