modules/015-admission-policy-engine/charts/constraint-templates/tests/allow-host-network/constraint_pss_deny_all.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: D8HostNetwork
metadata:
  name: pss-deny-all
spec:
  enforcementAction: "deny"
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaceSelector:
      matchLabels:
        enforce: deny-all
  parameters:
    allowHostNetwork: false
    ranges: []
