modules/015-admission-policy-engine/charts/constraint-templates/tests/allow-host-network/test_samples/constraint_templates/pss_baseline/001-allowed-no-hostnetwork-multiple-containers.yaml
apiVersion: v1
kind: Pod
metadata:
  name: allowed-no-hostnetwork-multiple-containers
  namespace: testns
spec:
  containers:
    - name: nginx
      image: nginx
      ports:
        - containerPort: 80
    - name: redis
      image: redis
      ports:
        - containerPort: 6379
