modules/015-admission-policy-engine/charts/constraint-templates/tests/allow-host-network/test_samples/constraint_templates/pss_baseline/002-allowed-no-hostnetwork.yaml
apiVersion: v1
kind: Pod
metadata:
  name: allowed-no-hostnetwork
  namespace: testns
spec:
  containers:
    - name: nginx
      image: nginx
      ports:
        - containerPort: 80
