modules/015-admission-policy-engine/charts/constraint-templates/tests/allow-host-network/test_samples/constraint_templates/pss_baseline/003-disallowed-hostnetwork-true.yaml
apiVersion: v1
kind: Pod
metadata:
  name: disallowed-hostnetwork-true
  namespace: testns
spec:
  hostNetwork: true
  containers:
    - name: nginx
      image: nginx
      ports:
        - containerPort: 80
