modules/015-admission-policy-engine/charts/constraint-templates/tests/allow-host-network/test_samples/constraint_templates/security_policy/004-allowed-hostnetwork-false.yaml
apiVersion: v1
kind: Pod
metadata:
  name: allowed-hostnetwork-false
  namespace: testns
spec:
  containers:
    - name: nginx
      image: nginx
      ports:
        - containerPort: 80
