modules/015-admission-policy-engine/charts/constraint-templates/tests/allow-host-network/test_samples/constraint_templates/security_policy/005-allowed-hostnetwork-true-port-in-range.yaml
apiVersion: v1
kind: Pod
metadata:
  name: allowed-hostnetwork-true-port-in-range
  namespace: testns
spec:
  hostNetwork: true
  containers:
    - name: nginx
      image: nginx
      ports:
        - containerPort: 25000
          hostPort: 25000
