modules/015-admission-policy-engine/charts/constraint-templates/tests/allow-host-network/test_samples/constraint_templates/security_policy/006-disallowed-hostnetwork-true-container-port.yaml
apiVersion: v1
kind: Pod
metadata:
  name: allowed-hostnetwork-true-no-hostport
  namespace: testns
spec:
  hostNetwork: true
  containers:
    - name: nginx
      image: nginx
      ports:
        - containerPort: 80
