modules/015-admission-policy-engine/charts/constraint-templates/tests/allow-host-network/test_samples/constraint_templates/security_policy/007-disallowed-hostnetwork-true-port-on-edge-max.yaml
apiVersion: v1
kind: Pod
metadata:
  name: disallowed-hostnetwork-true-port-on-edge-max
  namespace: testns
spec:
  hostNetwork: true
  containers:
    - name: nginx
      image: nginx
      ports:
        - containerPort: 9000
          hostPort: 30001
