modules/015-admission-policy-engine/charts/constraint-templates/tests/allow-host-network/test_samples/constraint_templates/security_policy/008-disallowed-hostnetwork-true-port-on-edge-min.yaml
apiVersion: v1
kind: Pod
metadata:
  name: disallowed-hostnetwork-true-port-on-edge-min
  namespace: testns
spec:
  hostNetwork: true
  containers:
    - name: nginx
      image: nginx
      ports:
        - containerPort: 19999
          hostPort: 19999
