modules/015-admission-policy-engine/charts/constraint-templates/tests/allow-host-network/test_suite.yaml
kind: Suite
apiVersion: test.gatekeeper.sh/v1alpha1
metadata:
  name: d8-host-network-ports
tests:
- name: pss-baseline
  template: ../../templates/security/allow-host-network.yaml
  constraint: constraint_pss_baseline.yaml
  cases:
  - name: 002-allowed-no-hostnetwork
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/pss_baseline/002-allowed-no-hostnetwork.yaml
    assertions:
    - violations: no
  - name: 001-allowed-no-hostnetwork-multiple-containers
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/pss_baseline/001-allowed-no-hostnetwork-multiple-containers.yaml
    assertions:
    - violations: no
  - name: 003-disallowed-hostnetwork-true
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/pss_baseline/003-disallowed-hostnetwork-true.yaml
    assertions:
    - violations: yes
- name: security-policy
  template: ../../templates/security/allow-host-network.yaml
  constraint: constraint_security_policy.yaml
  cases:
  - name: 005-allowed-hostnetwork-true-port-in-range
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/security_policy/005-allowed-hostnetwork-true-port-in-range.yaml
    assertions:
    - violations: no
  - name: 006-disallowed-hostnetwork-true-container-port
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/security_policy/006-disallowed-hostnetwork-true-container-port.yaml
    assertions:
    - violations: yes
  - name: 004-allowed-hostnetwork-false
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/security_policy/004-allowed-hostnetwork-false.yaml
    assertions:
    - violations: no
  - name: 010-disallowed-hostnetwork-true-port-out-of-range-low
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/security_policy/010-disallowed-hostnetwork-true-port-out-of-range-low.yaml
    assertions:
    - violations: yes
  - name: 011-disallowed-hostnetwork-true-container-port-out-of-range
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/security_policy/011-disallowed-hostnetwork-true-container-port-out-of-range.yaml
    assertions:
    - violations: yes
  - name: 009-disallowed-hostnetwork-true-port-out-of-range-high
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/security_policy/009-disallowed-hostnetwork-true-port-out-of-range-high.yaml
    assertions:
    - violations: yes
  - name: 008-disallowed-hostnetwork-true-port-on-edge-min
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/security_policy/008-disallowed-hostnetwork-true-port-on-edge-min.yaml
    assertions:
    - violations: yes
  - name: 007-disallowed-hostnetwork-true-port-on-edge-max
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/security_policy/007-disallowed-hostnetwork-true-port-on-edge-max.yaml
    assertions:
    - violations: yes
- name: security-policy-with-exception
  template: ../../templates/security/allow-host-network.yaml
  constraint: constraint_security_policy.yaml
  cases:
  - name: 020-027-allowed-by-exception-hostnetwork-true-tcp-25000
    inventory:
    - ../common/test_samples/ns.yaml
    - test_samples/security_policy_exceptions/exceptions/020-allow-hostnetwork-true-tcp-25000.yaml
    object: test_samples/security_policy_exceptions/pods/027-allowed-by-exception-hostnetwork-true-tcp-25000.yaml
    assertions:
    - violations: no
  - name: 012-024-allowed-by-exception-hostnetwork-false-empty
    inventory:
    - ../common/test_samples/ns.yaml
    - test_samples/security_policy_exceptions/exceptions/012-allow-hostnetwork-false-empty.yaml
    object: test_samples/security_policy_exceptions/pods/024-allowed-by-exception-hostnetwork-false-empty.yaml
    assertions:
    - violations: no
  - name: 015-025-disallowed-by-exception-hostnetwork-true-container-port
    inventory:
    - ../common/test_samples/ns.yaml
    - test_samples/security_policy_exceptions/exceptions/015-allow-hostnetwork-true-multiple-ports.yaml
    object: test_samples/security_policy_exceptions/pods/025-allowed-by-exception-hostnetwork-true-container-port-80.yaml
    assertions:
    - violations: yes
  - name: 015-029-allowed-by-exception-multiple-ports-tcp
    inventory:
    - ../common/test_samples/ns.yaml
    - test_samples/security_policy_exceptions/exceptions/015-allow-hostnetwork-true-multiple-ports.yaml
    object: test_samples/security_policy_exceptions/pods/029-allowed-by-exception-multiple-ports-tcp.yaml
    assertions:
    - violations: no
  - name: 015-030-allowed-by-exception-multiple-ports-udp
    inventory:
    - ../common/test_samples/ns.yaml
    - test_samples/security_policy_exceptions/exceptions/015-allow-hostnetwork-true-multiple-ports.yaml
    object: test_samples/security_policy_exceptions/pods/030-allowed-by-exception-multiple-ports-udp.yaml
    assertions:
    - violations: no
  - name: 016-033-allowed-by-exception-port-in-constraint-range
    inventory:
    - ../common/test_samples/ns.yaml
    - test_samples/security_policy_exceptions/exceptions/016-allow-hostnetwork-true-port-in-constraint-range.yaml
    object: test_samples/security_policy_exceptions/pods/033-allowed-by-exception-port-in-constraint-range.yaml
    assertions:
    - violations: no
  - name: 019-036-allowed-by-exception-port-out-of-constraint-range
    inventory:
    - ../common/test_samples/ns.yaml
    - test_samples/security_policy_exceptions/exceptions/019-allow-hostnetwork-true-port-out-of-constraint-range.yaml
    object: test_samples/security_policy_exceptions/pods/036-allowed-by-exception-port-out-of-constraint-range.yaml
    assertions:
    - violations: no
  - name: 018-035-allowed-by-exception-port-on-constraint-edge-min
    inventory:
    - ../common/test_samples/ns.yaml
    - test_samples/security_policy_exceptions/exceptions/018-allow-hostnetwork-true-port-on-constraint-edge-min.yaml
    object: test_samples/security_policy_exceptions/pods/035-allowed-by-exception-port-on-constraint-edge-min.yaml
    assertions:
    - violations: no
  - name: 017-034-allowed-by-exception-port-on-constraint-edge-max
    inventory:
    - ../common/test_samples/ns.yaml
    - test_samples/security_policy_exceptions/exceptions/017-allow-hostnetwork-true-port-on-constraint-edge-max.yaml
    object: test_samples/security_policy_exceptions/pods/034-allowed-by-exception-port-on-constraint-edge-max.yaml
    assertions:
    - violations: no
  - name: 021-037-disallowed-by-exception-hostnetwork-mismatch
    inventory:
    - ../common/test_samples/ns.yaml
    - test_samples/security_policy_exceptions/exceptions/021-allow-hostnetwork-true-wrong-port.yaml
    object: test_samples/security_policy_exceptions/pods/037-disallowed-by-exception-hostnetwork-mismatch.yaml
    assertions:
    - violations: yes
  - name: 021-038-disallowed-by-exception-hostport-mismatch
    inventory:
    - ../common/test_samples/ns.yaml
    - test_samples/security_policy_exceptions/exceptions/021-allow-hostnetwork-true-wrong-port.yaml
    object: test_samples/security_policy_exceptions/pods/038-disallowed-by-exception-hostport-mismatch.yaml
    assertions:
    - violations: yes
  - name: 021-039-disallowed-by-exception-protocol-mismatch
    inventory:
    - ../common/test_samples/ns.yaml
    - test_samples/security_policy_exceptions/exceptions/021-allow-hostnetwork-true-wrong-port.yaml
    object: test_samples/security_policy_exceptions/pods/039-disallowed-by-exception-protocol-mismatch.yaml
    assertions:
    - violations: yes
  - name: 043-disallowed-no-exception-label
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/security_policy_exceptions/pods/043-disallowed-no-exception-label.yaml
    assertions:
    - violations: yes
  - name: 013-040-disallowed-exception-allows-false-but-pod-has-true
    inventory:
    - ../common/test_samples/ns.yaml
    - test_samples/security_policy_exceptions/exceptions/013-allow-hostnetwork-false-with-hostport.yaml
    object: test_samples/security_policy_exceptions/pods/040-disallowed-exception-allows-false-but-pod-has-true.yaml
    assertions:
    - violations: yes
  - name: 012-042-disallowed-exception-allows-false-constraint-allows-true
    inventory:
    - ../common/test_samples/ns.yaml
    - test_samples/security_policy_exceptions/exceptions/012-allow-hostnetwork-false-empty.yaml
    object: test_samples/security_policy_exceptions/pods/042-disallowed-exception-allows-false-constraint-allows-true.yaml
    assertions:
    - violations: yes
  - name: 012-041-disallowed-exception-allows-false-constraint-allows-true-pod-uses-true
    inventory:
    - ../common/test_samples/ns.yaml
    - test_samples/security_policy_exceptions/exceptions/012-allow-hostnetwork-false-empty.yaml
    object: test_samples/security_policy_exceptions/pods/041-disallowed-exception-allows-false-constraint-allows-true-pod-uses-true.yaml
    assertions:
    - violations: yes
  - name: 044-disallowed-no-exception-port-out-of-constraint-range
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/security_policy_exceptions/pods/044-disallowed-no-exception-port-out-of-constraint-range.yaml
    assertions:
    - violations: yes
  - name: 045-disallowed-no-exception-container-port
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/security_policy_exceptions/pods/045-disallowed-no-exception-container-port.yaml
    assertions:
    - violations: yes
  - name: 018-032-allowed-by-exception-port-exactly-min-constraint-range
    inventory:
    - ../common/test_samples/ns.yaml
    - test_samples/security_policy_exceptions/exceptions/018-allow-hostnetwork-true-port-on-constraint-edge-min.yaml
    object: test_samples/security_policy_exceptions/pods/032-allowed-by-exception-port-exactly-min-constraint-range.yaml
    assertions:
    - violations: no
  - name: 017-031-allowed-by-exception-port-exactly-max-constraint-range
    inventory:
    - ../common/test_samples/ns.yaml
    - test_samples/security_policy_exceptions/exceptions/017-allow-hostnetwork-true-port-on-constraint-edge-max.yaml
    object: test_samples/security_policy_exceptions/pods/031-allowed-by-exception-port-exactly-max-constraint-range.yaml
    assertions:
    - violations: no
  - name: 022-046-allowed-exception-container-port
    inventory:
    - ../common/test_samples/ns.yaml
    - test_samples/security_policy_exceptions/exceptions/022-allow-hostport-despite-empty-ranges.yaml
    object: test_samples/security_policy_exceptions/pods/046-allowed-exception-container-port.yaml
    assertions:
    - violations: no
  - name: 022-047-disallowed-exception-container-port
    inventory:
    - ../common/test_samples/ns.yaml
    - test_samples/security_policy_exceptions/exceptions/022-allow-hostport-despite-empty-ranges.yaml
    object: test_samples/security_policy_exceptions/pods/047-disallowed-exception-container-port.yaml
    assertions:
    - violations: yes
  - name: 023-048-disallowed-by-exception-empty-spec
    inventory:
    - ../common/test_samples/ns.yaml
    - test_samples/security_policy_exceptions/exceptions/023-empty-spec.yaml
    object: test_samples/security_policy_exceptions/pods/048-disallowed-by-exception-empty-spec.yaml
    assertions:
    - violations: yes
- name: security-policy-restrictive-with-exception
  template: ../../templates/security/allow-host-network.yaml
  constraint: constraint_pss_deny_all.yaml
  cases:
  - name: 014-026-allowed-by-exception-hostnetwork-true-despite-constraint-false
    inventory:
    - ../common/test_samples/ns.yaml
    - test_samples/security_policy_exceptions/exceptions/014-allow-hostnetwork-true-despite-constraint.yaml
    object: test_samples/security_policy_exceptions/pods/026-allowed-by-exception-hostnetwork-true-despite-constraint-false.yaml
    assertions:
    - violations: no
  - name: 022-028-allowed-by-exception-hostport-despite-empty-ranges
    inventory:
    - ../common/test_samples/ns.yaml
    - test_samples/security_policy_exceptions/exceptions/022-allow-hostport-despite-empty-ranges.yaml
    object: test_samples/security_policy_exceptions/pods/028-allowed-by-exception-hostport-despite-empty-ranges.yaml
    assertions:
    - violations: no
  - name: 024-049-allowed-hostnetwork-with-hostport-only-exception
    inventory:
    - ../common/test_samples/ns.yaml
    - test_samples/security_policy_exceptions/exceptions/024-allow-hostport-only.yaml
    object: test_samples/security_policy_exceptions/pods/049-allowed-hostnetwork-with-hostport-only-exception.yaml
    assertions:
    - violations: no
  - name: 043-disallowed-no-exception-hostnetwork-true
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/security_policy_exceptions/pods/043-disallowed-no-exception-label.yaml
    assertions:
    - violations: yes
